# get50

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml  tests.yml
scripts/: gem.py  scraped_data.json  scraper.py
src/ez50/: commands.py  data.json  main.py  utils.py
src/get50/: data.json  main.py  utils.py
tests/: tests.py
