[project]
name = "ez50"
version = "0.1.0"
description = "Unofficial CLI tool to Download Distribution Code for CS50 courses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
]

[project.scripts]
ez50 = "ez50.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"