[project]
name = "ez50"
version = "0.1.3"
description = "CS50 made easy! Unofficial community tool and is NOT affiliated with Harvard University or CS50."
readme = "README.md"
authors = [ {name = "Emerson Proenca"} ]
requires-python = ">=3.9.0"

keywords = ["cs50", "harvard", "education", "cli", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Intended Audience :: Education"

]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=12.0.0",
]

[project.scripts]
ez50 = "ez50.main:run"

[project.urls]
Homepage = "https://github.com/emerson-proenca/ez50"
Issues = "https://github.com/emerson-proenca/ez50/issues"
Repository = "https://github.com/emerson-proenca/ez50.git"
Download = "https://pypi.org/project/validate-pyproject/#files"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]